# drake

DDP/: BUILD.bazel  config.h  iLQR_solver.cc  iLQR_solver.h  parareal.cc  parareal.h  run_ddp.cc  run_ddp_library.cc  run_ddp_library.h  yaskawa_cost_function.cc  yaskawa_cost_function.h  yaskawa_model.cc  yaskawa_model.h
examples/: BUILD.bazel
examples/conveyor_belt_fake/: run_conveyor.cc
examples/manipulation_station/: BUILD.bazel  manipulation_station.cc  manipulation_station.h  mock_station_simulation.cc
examples/manipulation_station/models/: amazon_table_floor_only.sdf  cubby.sdf  package1.sdf  package2.sdf  package3.sdf  sorting_shelf.sdf
examples/manipulation_station/models/Conveyor_Belt/: conveyor_belt_surface_only_collision.sdf
examples/manipulation_station/models/PB_Layout_V2_description/: BUILD.bazel  PB_Layout_V2.sdf  model.config  package.xml
examples/multibody/conveyor_belt/: BUILD.bazel  conveyor_control.cc  conveyor_control.h  conveyor_controller.cc  conveyor_controller.h  conveyor_controller2.cc  conveyor_controller2.h  conveyor_geometry.h  conveyor_plant.cc  conveyor_plant.h  conveyor_simulation.cc  conveyor_station.h
examples/multibody/conveyor_belt/Archive/: conveyor_geometry.cc  conveyor_station.cc  run_conveyor.cc
examples/multibody/conveyor_belt/Simple_simulation/: BUILD.bazel  conveyor_plant.cc  conveyor_plant.h
examples/particles/: particle.cc
examples/yaskawa_arm/: BUILD.bazel  move_yaskawa_ee.cc  primitive_executor.cc  primitive_executor.h  primitive_runner.cc  yaskawa_common.cc  yaskawa_common.h  yaskawa_lcm.cc  yaskawa_lcm.h  yaskawa_plan_runner.cc
examples/yaskawa_arm/iiwa_stuff/: kuka_plan_runner.cc  kuka_simulation.cc  kuka_torque_controller.cc  kuka_torque_controller.h  move_iiwa_ee.cc
lcmtypes/: BUILD.bazel  lcmt_conveyor_belt_command.lcm  lcmt_conveyor_belt_status.lcm  lcmt_ddp_traj.lcm  lcmt_yaskawa_ee_command.lcm  lcmt_yaskawa_ee_status.lcm
manipulation/conveyor_belt/: BUILD.bazel  conveyor_belt_lcm.cc  conveyor_belt_lcm.h  conveyor_belt_velocity_controller.cc  conveyor_belt_velocity_controller.h
manipulation/models/: BUILD.bazel
manipulation/models/PB_Layout_V2_description/: BUILD.bazel  model.config  package.xml
manipulation/models/PB_Layout_V2_description/sdf/: PB_Layout_V2.sdf
manipulation/models/PB_Layout_V2_description/sdf/test/: yaskawa_mesh_collision_test.cc
manipulation/models/allegro_hand_description/urdf/: allegro_hand_description_right.urdf
manipulation/models/conveyor_belt_description/: BUILD.bazel  model.config  package.xml
manipulation/models/conveyor_belt_description/sdf/: conveyor_belt_collision_only_1.sdf  conveyor_belt_collision_only_2.sdf  conveyor_belt_robot.sdf  conveyor_belt_surface_only_collision.sdf  conveyor_belt_surface_only_collision_2.sdf  conveyor_belt_visual_only_1.sdf  conveyor_belt_visual_only_2.sdf  conveyor_simple_robot.sdf  pusher.sdf
manipulation/models/iiwa_description/urdf/: iiwa7_no_world_joint.urdf
manipulation/models/yaskawa_description/: BUILD.bazel  model.config  package.xml
manipulation/models/yaskawa_description/Motoman_GP25/: CMakeLists.txt  package.xml
manipulation/models/yaskawa_description/Motoman_GP25/config/: joint_names_Motoman_GP25.yaml
manipulation/models/yaskawa_description/Motoman_GP25/launch/: display.launch  gazebo.launch
manipulation/models/yaskawa_description/Motoman_GP25/meshes/: B_Link.STL
manipulation/models/yaskawa_description/Motoman_GP25/urdf/: Motoman_GP25.csv  Motoman_GP25.urdf
manipulation/models/yaskawa_description/mesh/: b-collision.stl  b-cover-visual.STL  b-visual.stl  b-visual2.STL  f-collision.stl  f-visual.stl  gp25_base_700.stl  l-collision.stl  l-visual.stl  r-collision.stl  r-visual.stl  s-collision.stl  s-visual.stl  t-collision.stl  t-visual.stl  t-visual2.STL  u-collision.stl  u-visual.stl
manipulation/models/yaskawa_description/meshes/: b_Link.STL  base_link.STL  l_Link.STL  t_Link.STL
manipulation/models/yaskawa_description/meshes_failed/: L_Link.STL  T_Link.STL  base_link.STL  base_link2.STL
manipulation/models/yaskawa_description/urdf/: Motoman_GP25.urdf  arm.xacro  temp yaskawa urdf  yaskawa_no_collision.urdf  yaskawa_with_model_collision.urdf
manipulation/models/yaskawa_description/urdf/test/: yaskawa_mesh_collision_test.cc
manipulation/models/yaskawa_end_effector_description/: end_effector.urdf  end_effector.xacro  install.sh  model.config  package.xml
manipulation/models/yaskawa_end_effector_description/mesh/: CBEE_v4_base_drake.STL  CBEE_v4_whisker_drake.STL  cbee_gripper_1st-collision.stl
manipulation/models/yaskawa_end_effector_description/urdf/: end_effector.urdf  end_effector_3.urdf  end_effector_4.urdf
manipulation/models/yaskawa_end_effector_description/urdf/Archive/: end_effector_2.urdf  end_effector_fake.urdf
manipulation/schunk_wsg/: schunk_wsg_constants.h  schunk_wsg_position_controller.cc  schunk_wsg_position_controller.h
manipulation/yaskawa/: BUILD.bazel  yaskawa_command_receiver.cc  yaskawa_command_receiver.h  yaskawa_command_sender.cc  yaskawa_command_sender.h  yaskawa_constants.cc  yaskawa_constants.h  yaskawa_status_receiver.cc  yaskawa_status_receiver.h  yaskawa_status_sender.cc  yaskawa_status_sender.h
manipulation/yaskawa_conveyor_belt_dof1/: BUILD.bazel  conveyor_belt_dof1_constants.h  conveyor_belt_dof1_controller.cc  conveyor_belt_dof1_controller.h  conveyor_belt_dof1_lcm.cc  conveyor_belt_dof1_lcm.h  conveyor_belt_dof1_position_controller.cc  conveyor_belt_dof1_position_controller.h  new_belt_position_controller.cc  new_belt_position_controller.h
multibody/benchmarks/acrobot/: acrobot.sdf
multibody/plant/: multibody_plant.cc  multibody_plant.h
systems/controllers/: inverse_dynamics_controller.cc
systems/framework/: diagram.h  system.h
