# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

# drake_cc_library(
#     name = "conveyor_belt_velocity_controller",
#     srcs = ["conveyor_belt_velocity_controller.cc"],
#     hdrs = ["conveyor_belt_velocity_controller.h"],
#     deps = [
#         "//math:saturate",
#         "//systems/framework:leaf_system",
#         "//systems/primitives:discrete_derivative",
#     ],
# )

# drake_cc_library(
#     name = "conveyor_belt_lcm",
#     srcs = ["conveyor_belt_lcm.cc"],
#     hdrs = ["conveyor_belt_lcm.h"],
#     deps = [
#         "//lcmtypes:conveyor",
#         "//systems/framework:leaf_system",
#         "//systems/primitives:matrix_gain",
#     ],
# )

add_lint_tests()
