<?xml version="1.0"?>
<package>
  <name>Conveyor_description</name>
  <version>1.4.0</version>
  <description>
    This package contains the SDF of the Conveyor
  </description>
  <author email="drake-users@mit.edu">Drake Users</author>
  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
