<?xml version="1.0"?>
<package>
  <name>PB_description</name>
  <version>1.4.0</version>
  <description>
    This package contains the URDF of the PB_Layout_V2
  </description>
  <author email="drake-users@mit.edu">Drake Users</author>
  <maintainer email="drake-users@mit.edu">Drake Users</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
